<resources>
    <string name="app_name">Dbk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_reset">Reset password</string>
    <string name="password"> Password</string>
    <string name="username"> Username</string>
    <string name="login"> Login</string>
    <string name="register_here"> Register Here.</string>
    <string name="forgot_password"> Forgot Password?</string>
    <string name="email_action">We will send you a reset link to the email you provide. Kindly use the same email you used during registration. </string>
    <string name="send_link">Send Link</string>
    <string name="your_email_addresss">Your email addresss</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="instagram_url">https://www.instagram.com/reuben_bichage</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="random_text">Why painful the sixteen how minuter looking nor. Subject but why ten earnest husband imagine sixteen brandon.
        Are unpleasing occasional celebrated motionless unaffected conviction out.
        Evil make to no five they. Stuff at avoid of sense small fully it whose an.
        Ten scarcely distance moreover handsome age although. As when have find fine or said no mile.
        He in dispatched in imprudence dissimilar be possession unreserved insensible. She evil face fine calm have now.
        Separate screened he outweigh of distance landlord. How promotion excellent curiosity yet attempted happiness.
        Gay prosperous impression had conviction. For every delay death ask style.
        Me mean able my by in they. Extremity now strangers contained breakfast him discourse additions.
        Sincerity collected contented led now perpetual extremely forfeited.</string>
    <string name="profile">Profile</string>
    <string name="t_and_c">By Signing up, you are agreeing to our terms and
                                        conditions.</string>
    <string name="previous_donations">Previous Donations</string>
    <string-array name="blood_type">
        <item>Not Sure</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>0-</item>
    </string-array>

    <string-array name="gender">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="counties">
        <item>Choose County</item>
        <item>Mombasa</item>
        <item>Kwale</item>
        <item>Kilifi</item>
        <item>Tana River</item>
        <item>Lamu</item>
        <item>Taita Taveta</item>
        <item>Garissa</item>
        <item>Wajir</item>
        <item>Mandera</item>
        <item>Marsabit</item>
        <item>Isiolo</item>
        <item>Meru</item>
        <item>Tharaka-Nithi</item>
        <item>Embu</item>
        <item>Kitui</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Kirinyaga</item>
        <item>Murang\'a</item>
        <item>Kiambu</item>
        <item>Turkana</item>
        <item>West Pokot</item>
        <item>Samburu</item>
        <item>Trans-Nzoia</item>
        <item>Uasin Gishu</item>
        <item>Elgeyo-Marakwet</item>
        <item>Nandi</item>
        <item>Baringo</item>
        <item>Laikipia</item>
        <item>Nakuru</item>
        <item>Narok</item>
        <item>Kajiado</item>
        <item>Kericho</item>
        <item>Bomet</item>
        <item>Kakamega</item>
        <item>Vihiga</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Siaya</item>
        <item>Kisumu</item>
        <item>Homa Bay</item>
        <item>Migori</item>
        <item>Kisii</item>
        <item>Nyamira</item>
        <item>Nairobi</item>


    </string-array>


    <!--Navigation Drawer Items-->
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <string name="drawer_contact">Contact Us</string>
    <string name="drawer_about">About Dbk </string>
    <string name="copyright">Donate Blood Kenya.</string>
    <string name="c_2018">c.2018</string>
    <string name="version_app">version 1.0.</string>
    <string name="developer">Developed by Reuben Bichage</string>
    <string name="all_rights_reserved">All Rights Reserved.</string>
    <string name="my_appointments">My Appointments</string>
    <string name="settings_1">Settings</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="w">Update Profile</string>
    <string name="select_type">Select your blood type, leave blank if not sure.</string>
    <string name="phone_number">Phone Number</string>
    <string name="refresh">Refresh</string>
    <string name="account">Account</string>
    <string name="old_password">Old Password</string>
    <string name="update_passowrd">Update Passowrd</string>
    <string name="repeat_password">Repeat Password</string>

    <string-array name="hospitals">
        <item>Mombasa Hospital</item>
        <item>Makueni Hospital</item>
    </string-array>

    <string-array name="county_samples">
        <item>Mombasa</item>
        <item>Makueni</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
