<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reuben.donatebloodkenya.activities.About">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:background="@color/primary_dark"
        android:elevation="10dp"
        app:title="About App"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="45dp">

    </androidx.appcompat.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp"
        android:text="@string/copyright"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/rights_reserved"
        android:layout_width="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/all_rights_reserved"
        android:layout_below="@+id/tv_copy"/>
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/rights_reserved"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:text="@string/c_2018"
        />
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_year"
        android:text="@string/version_app"
        />
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_version"
        android:layout_marginBottom="20dp"
        android:text="@string/developer"
        />
</RelativeLayout>

</ScrollView>
</RelativeLayout>