<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="activities.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="134dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:id="@+id/etuname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/etuname"
                android:layout_alignStart="@id/etuname"
                android:layout_alignEnd="@id/etuname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etfirstname"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/etemail"
                android:layout_alignStart="@id/etuname"
                android:layout_alignEnd="@id/etuname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etlastname"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/etfirstname"
                android:layout_alignStart="@id/etuname"
                android:layout_alignEnd="@id/etuname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/etlastname"
                android:layout_alignStart="@id/etuname"
                android:layout_alignEnd="@id/etuname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                android:textSize="16sp" />

            <EditText

                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/birthdate"
                android:layout_alignStart="@+id/etuname"
                android:layout_alignEnd="@id/etuname"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_shape"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/bregister"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/birthdate"
                android:layout_alignTop="@+id/etpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@drawable/button_shape"
                android:onClick="onClick"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#1b1a1a" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bregister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/login_here"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="#FFF"
                android:visibility="invisible" />


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>