<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.reuben.donatebloodkenya.activities.UpdateProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_toolbar"
        android:layout_width="match_parent"
        android:background="@color/primary_dark"
        android:elevation="15dp"
        app:title="Update Profile"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="45dp">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/relative_1"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="16sp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/profile_first"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/profile_phone"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:padding="10dp"
            android:id="@+id/profile_last"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/profile_phone"
            android:layout_alignEnd="@+id/profile_phone"
            android:ems="10"
            android:layout_marginStart="5dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />
        <EditText
            android:padding="10dp"
            android:layout_below="@+id/profile_first"
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
        <EditText
            android:padding="10dp"
            android:id="@+id/profile_birthdate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_email"
            android:layout_alignStart="@id/profile_phone"
            android:layout_alignEnd="@id/profile_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date_of_birth"
            android:textSize="16sp" />
        <Spinner
            android:padding="10dp"
            android:layout_alignStart="@+id/profile_phone"
            android:id="@+id/profile_county"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/profile_birthdate"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="11dp"
            android:entries="@array/counties">

        </Spinner>

        <Spinner
            android:id="@+id/profile_gender"
            android:layout_alignEnd="@+id/profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/profile_birthdate"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="11dp"
            android:entries="@array/gender"
            >
        </Spinner>

        <Button

            android:id="@+id/update_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/profile_county"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/update"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFF" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_alignStart="@+id/profile_phone"
           android:layout_alignEnd="@+id/profile_phone"
           android:layout_below="@id/update_button"
           android:id="@+id/textinputlayout1"
           android:layout_width="match_parent"
           app:passwordToggleEnabled="true"
           android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_alignStart="@+id/profile_phone"
                android:layout_alignEnd="@+id/profile_phone"
                android:layout_below="@id/textinputlayout1"
                android:id="@+id/textinputlayout2"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"/>



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>