<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.reuben.donatebloodkenya.activities.ResetPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reset_toolbar"
        android:layout_width="match_parent"
        android:background="@color/primary_dark"
        android:elevation="10dp"
        app:titleMarginStart="15dp"
        app:title="Reset Password"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="45dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/reset_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_marginStart="@dimen/materialize_baseline_grid_x10"
        android:padding="5dp"
        android:layout_below="@+id/reset_image"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/email_action"
        android:textSize="16sp"
        android:textColor="#000000" />

    <EditText
        android:layout_below="@+id/textView"
        android:id="@+id/etemailsend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/your_email_addresss"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/b_link"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etemailsend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_shape"
        android:text="@string/send_link"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000" />




</RelativeLayout>
